# squix

./: .gitignore  README.md  idea.md  pyproject.toml
.prompts/: claude_createAgentsSystemFromClaudeCode.md
squix/: __init__.py  default_config.yml  main.py
squix/agents/: __init__.py  base.py  factory.py
squix/agents/agents/custom/: test_bot.py
squix/agents/built_in/: __init__.py  ai.py  build.py  db.py  debug.py  idea.py  orch.py  plan.py  product.py  readme.py  talk.py  web.py
squix/agents/generator/: __init__.py  agent_generator.py
squix/api/: __init__.py  ollama.py  openrouter.py
squix/core/: __init__.py  config.py  engine.py  init_scanner.py  session.py  session_context.py  task_state.py
squix/memory/: __init__.py  manager.py
squix/models/: __init__.py  base.py  registry.py
squix/observability/: __init__.py  cost_tracker.py  logger.py
squix/policy/: __init__.py  engine.py
squix/skills/: __init__.py  definitions.py  registry.py
squix/ui/: __init__.py  cli.py
squix/workspace/: __init__.py  manager.py  primary_file_tracker.py
tests/: conftest.py  test_agentic_loop.py  test_agents.py  test_cli_modes.py  test_config.py  test_core_engine.py  test_cost_tracker.py  test_edit_file.py  test_policy_engine.py  test_result_contract.py  test_session.py
tests/test1/: main.py
